[package]
name = "floppy-disk"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "async filesystem facade for rust!"
repository = "https://github.com/queer/floppy-disk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
derivative = "2.2.0"
derive-getters = "0.2.0"
futures = "0.3.27"
libc = "0.2.144"
rand = "0.8.5"
rsfs-tokio = "0.5.0"
tokio = { version = "1.26.0", features = ["fs", "sync", "rt", "test-util", "macros"] }
